[package]

name = "mount"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
version = "0.3.0"
description = "Mounting middleware for Iron."
repository = "https://github.com/iron/mount"
documentation = "http://ironframework.io/doc/mount/index.html"
license = "MIT"
keywords = ["iron", "web", "handler", "routing"]

[dependencies]
iron = { git = "https://github.com/MJDSys/iron", branch = "async" }
sequence_trie = "0.2"
